--- a/metadata.yaml
+++ b/metadata.yaml
@@ -40,6 +40,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Paris (France) -- History -- 19th century'
 - !lcc 'PQ'
+- GITenberg
 tableOfContents: Préface -- Histoire d'un Melon -- Le Musée Du Luxembourg -- Jules
   Vallès -- Feu le bœuf-gras -- Actes en vers -- Pauvres censeurs -- L'inflexible
   Piétri -- Sermon de carême -- Clément Thomas -- Le Modèle -- A L'école des Beaux-Arts
